# gengen

./: .autotools  .cproject  .cvsignore  .gitignore  .project  AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO.txt  acinclude.m4  autogen.sh  configure.ac  gengen.directive  gengen.kdevelop
build-aux/: .gitignore
doc/: .cvsignore  .gitignore  Makefile.am  example_fundef.c_skel  example_fundef.cc_skel.texinfo  example_fundef.h  example_fundef_gen.cc.texinfo  example_if.h_skel  example_text_gen.cc.texinfo  example_text_gen_c.c.texinfo  gengen.1  gengen.info  gengen.texinfo  index.html  stamp-vti  test1.cc_skel.texinfo  test1_gen.cc.texinfo  test1_gen_c.c.texinfo  version.texi
lib/: .cvsignore  .gitignore  Makefile.am
m4/: gnulib-cache.m4  gnulib-comp.m4
src/: .cvsignore  .gitignore  Makefile.am  asserttest.h  binaryexpression.cpp  binaryexpression.h  cmdline.c  cmdline.ggo  cmdline.h  errormanager.cpp  errormanager.h  expression.cpp  expression.h  expressionchecker.cpp  expressionchecker.h  expressiongenerator_c.cpp  expressiongenerator_c.h  expressiongenerator_cpp.cpp  expressiongenerator_cpp.h  expressiongenerator_lua.cpp  expressiongenerator_lua.h  expressionoperators.h  expressiontype.h  expressionvisitor.cpp  expressionvisitor.h  expressionvisitor.hpp  expressionvisitor_dbtab.cc  expressionwithop.cpp  expressionwithop.h  fileutil.cc  fileutil.h  gengen.cc  gengen_cmdline_options.cc  gengen_cmdline_options.h  gengen_globals.h  ifstruct.cpp  ifstruct.h  mainskelfactory.h  mainskelstruct.h  my_sstream.h  (+66 more)
src/includes/: sstream
src/skels/: Makefile.am  abstrmethod.h  abstrmethod.h_skel  c_convert.h  c_convert.h_skel  c_header.h_skel  c_source.h  c_source.h_skel  callextfun.h  callextfun.h_skel  callextfun_lua.h  callextfun_lua.h_skel  callmeth.h  callmeth.h_skel  cc_source.h  cc_source.h_skel  class.h  class.h_skel  copyright.h  copyright.h_skel  extern_function.h  extern_function.h_skel  extern_function_lua.h  extern_function_lua.h_skel  genfunction.h  genfunction.h_skel  genfunction_lua.h  genfunction_lua.h_skel  genmethod.h  genmethod.h_skel  genmethod_body.h  genmethod_body.h_skel  genstrfunction.h  genstrfunction.h_skel  genstrfunction_lua.h  genstrfunction_lua.h_skel  genstringfun.h_skel  genstringfun_lua.h_skel  ifgen_c.h  ifgen_c.h_skel  (+22 more)
src/tests/: .cvsignore  Makefile.am  test_exp_checker.cpp  test_exp_generator.cpp  test_replace.cc  test_type_env.cpp
tests/: .cvsignore  Makefile.am  alreadydef.cc_skel  alreadydef.err  alreadydef2.cc_skel  alreadydef2.err  alreadydef3.cc_skel  alreadydef3.err  example_fundef.cc_skel  example_fundef.h.test  example_fundef_gen.cc  example_text.h.test  example_text.text_skel  example_text_c.h.test  example_text_gen.cc  example_text_gen_c.c  example_text_gen_lua.lua  example_text_lua.lua.test  gen_test_cicle_cstring.cc.test  gen_test_cicle_m.cc.test  gen_test_cicle_str.cc.test  gen_test_iter.cc.test  gen_test_vars.cc.test  loop.cc_skel  loop.h.test  notbool.cc_skel  notbool.err  notbool2.cc_skel  notbool2.err  notbool3.cc_skel  notbool3.err  notsametype.cc_skel  notsametype.err  notsametype2.cc_skel  notsametype2.err  test1.cc_skel  test1.h.test  test1_c.h.test  test1_gen.cc  test1_gen_c.c  (+60 more)
tests/otherdir/: Makefile.am
