# Copyright (C) 2002 Lorenzo Bettini <http://www.lorenzobettini.it>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = autogen.sh m4/gnulib-cache.m4 ChangeLog COPYING NEWS THANKS INSTALL README

SUBDIRS = lib src doc tests

gengendoc_DATA = ChangeLog COPYING NEWS THANKS INSTALL README

